--- a/HackerManGame/HackerManGame/Properties/Resources.resx
+++ b/HackerManGame/HackerManGame/Properties/Resources.resx
@@ -124,19 +124,19 @@
   <data name="EnemyLeft" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Enemy3.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Computer" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Computer.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="EnemyRight" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Enemy2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="HackermanPicRight" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\HackermanPicRight.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="qustion1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\qustion1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="HackermanPicRight" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\HackermanPicRight.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="qustion2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\qustion2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ComputerPic" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ComputerPic.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
